# nest

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  clippy.toml  pyproject.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/nest-cli/: Cargo.toml
crates/nest-cli/src/: main.rs
crates/nest-cli/src/cmd/: benchmark.rs  cite.rs  inspect.rs  mod.rs  search.rs  search_ann.rs  search_text.rs  stats.rs  util.rs  validate.rs
crates/nest-cli/tests/: cli_e2e.rs
crates/nest-format/: Cargo.toml
crates/nest-format/examples/: regen_golden.rs
crates/nest-format/src/: chunk.rs  encoding.rs  error.rs  layout.rs  lib.rs  manifest.rs  reader.rs  sections.rs  writer.rs
crates/nest-format/src/encoding/: float16.rs  int8.rs  mod.rs  zstd_codec.rs
crates/nest-format/src/layout/: footer.rs  header.rs  mod.rs  section_entry.rs
crates/nest-format/src/manifest/: canonical.rs  mod.rs  validate.rs
crates/nest-format/src/reader/: decode.rs  mod.rs  parse.rs  validate.rs
crates/nest-format/src/sections/: canonical.rs  chunk_ids.rs  codec.rs  contract.rs  mod.rs  provenance.rs  spans.rs
crates/nest-format/src/writer/: build.rs  encoding_choice.rs  mod.rs  payload.rs  tests.rs
crates/nest-format/tests/: dual_integrity.rs  golden.rs  negative_fp16.rs  negative_int8.rs  negative_zstd.rs  roundtrip.rs  v01_compat.rs
crates/nest-format/tests/fixtures/: golden_v1_minimal.nest
crates/nest-python/: Cargo.toml  build.rs
crates/nest-python/src/: build_fn.rs  chunk_id_fn.rs  lib.rs  nest_file.rs
crates/nest-runtime/: Cargo.toml
crates/nest-runtime/src/: ann.rs  bm25.rs  error.rs  lib.rs  materialize.rs  mmap_file.rs  search.rs  simd.rs
crates/nest-runtime/src/ann/: build.rs  codec.rs  mod.rs  search.rs  select_neighbors.rs
crates/nest-runtime/src/bm25/: codec.rs  fusion.rs  index.rs  mod.rs  tests.rs  tokenize.rs
crates/nest-runtime/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs  tests.rs
crates/nest-runtime/tests/: fp16_topk_recall_vs_f32.rs  hnsw_recall.rs  search_exact.rs
data/: corpus_next.v1.nest
data/measure/: baseline.json  post_phase2.json  post_phase3.json  post_phase6.json
database/: README.md
database/FakeBr-hf/: test.csv  train.csv
database/FakeTrue.Br/: FakeTrueBr_corpus.csv
database/FakeTrue.Br-hf/: test.csv  train.csv
database/corpus-combined/: test.csv  train.csv
database/corpus-next/: embed_cache.sqlite
database/portuguese-fake-news-classifier-bilstm-combined/: .gitattributes  README.md  final_classification_report.parquet  final_predictions.parquet
database/truw-built/: BUILD.md  truw_canonical_ptbr.csv  truw_canonical_ptbr_embeddings.npy  truw_canonical_ptbr_v2.csv  truw_canonical_ptbr_v2_embeddings.npy  truw_ptbr.nest
doc/: CHANGELOG.md  USAGE.md  architecture.md  changelog.md  usage.md
kdb/adr/: 0001-binary-format-frozen-v1.md  0002-rust-runtime-python-builder.md  0003-sha256-only-no-blake3.md  0004-pyo3-single-python-path.md  0005-cli-takes-json-vector-no-text.md  0006-section-encodings-within-v1.md  0007-optional-sections-hnsw-bm25.md  0008-model-hash-granular-fingerprint.md  0009-simd-runtime-dispatch.md  0010-search-text-supersedes-0005.md  0011-file-hygiene-300-lines.md  template.md
python/: builder.py  convert_legacy.py  embed_query.py  model_fingerprint.py  nest.py
python/tools/: _baseline_decoder.py  _bench_runner.py  _corpus_sources.py  (+3 more)
scripts/: release_check.sh
tests/: test.py  test_builder.py  test_e2e.py  test_search_text_model_hash.py
(+8 files in other folders)
