[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hoffresearch/nest"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
memmap2 = "0.9"
rayon = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zstd = { version = "0.13", default-features = false }
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
nest-format = { path = "crates/nest-format" }
nest-runtime = { path = "crates/nest-runtime" }
