[package]
name = "nest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
nest-format = { workspace = true }
nest-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
rand = "0.9"
hex = "0.4"
