[package]
name = "nest-format"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lib]
name = "nest_format"
path = "src/lib.rs"
