[package]
name = "nest-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_nest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py312"] }
nest-format = { workspace = true }
nest-runtime = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.28"
