[package]
name = "nest-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nest-format = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
half = { workspace = true }
hex = "0.4"

[lib]
name = "nest_runtime"
path = "src/lib.rs"
